<resources>
    <string name="app_name">Beauty Style</string>
    <string name="next">&gt;</string>
    <string name="preview">&lt;</string>
    <string name="nome">nome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">Excluir</string>
    <string name="edit">Editar</string>
    <string name="title_activity_relatorios">RelatoriosActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="purchase_date">Data da Compra</string>
    <string name="category">Categoria</string>
    <string name="list_category">Lista de Categorias</string>
    <string name="new_category">Nova Categoria</string>
    <string name="item_list">Lista de itens:</string>
    <string name="save">Salvar</string>
    <string name="total_value">Valor Total</string>
    <string name="others">Outros</string>
    <string name="expenses">Gastos</string>
    <string name="month">Mês</string>
    <string name="todo">TODO</string>
    <string name="category_">Categoria:</string>
    <string name="description">Descrição:</string>
    <string name="select">Selecione</string>
    <string name="overview">Visão Geral</string>
    <string name="amount_">Total de Ganhos:</string>
    <string name="total_expense">Total De Gastos:</string>
    <string name="left">Sobrou:</string>
    <string name="event_date">Data do Agendamento</string>
    <string name="expense_date">Data da Compra</string>
    <string name="start_time">Início ás:</string>
    <string name="start_time_">Horário Inicial</string>
    <string name="hrs">hrs</string>
    <string name="customer">Cliente</string>
    <string name="search">Buscar</string>
    <string name="service">Serviço</string>
    <string name="duration">Duração</string>
    <string name="default_coin_value">0,00</string>
    <string name="gain">RECEBIDO</string>
    <string name="not_received">NÃO RECEBIDO</string>
    <string name="importing">Importar</string>
    <string name="add_selected">Adicionar Selecionados</string>
    <string name="new_cliente">Novo Cliente</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="new_service">Novo Serviço</string>
    <string name="service_name">Nome do Serviço</string>
    <string name="duration_time">Tempo de Duração</string>
    <string name="repeat">Repete</string>
    <string name="do_not_repeat">Não Repete</string>
    <string name="year">Ano</string>
    <string name="wait_a_moment">Aguarde um instante por favor…</string>
    <string name="report">Relatório</string>
    <string name="select_date">Selecione uma Data</string>
    <string name="start_date">Data Inicial</string>
    <string name="end_date">Data Final</string>
    <string name="home">Inicio</string>
    <string name="reports">Relatórios</string>
    <string name="expense">Gastos</string>
    <string name="calendar">Calendáro</string>
    <string name="value">Valor</string>
    <string name="coin_BR">R$ 0,00</string>
    <string name="block">Bloquear</string>
    <string name="block_time_">Bloquear um Horário</string>
    <string name="reason">Motivo</string>
    <string name="end_time">Horário Final</string>


</resources>