<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_new_service_action_bar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/purple_700"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/new_service"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/fragment_new_service_action_bar"
        app:layout_constraintStart_toStartOf="@id/fragment_new_service_action_bar"
        app:layout_constraintTop_toTopOf="@id/fragment_new_service_action_bar" />

    <ImageView
        android:id="@+id/fragment_new_job_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@id/fragment_new_service_action_bar"
        app:layout_constraintEnd_toEndOf="@id/fragment_new_service_action_bar"
        app:layout_constraintTop_toTopOf="@id/fragment_new_service_action_bar"
        app:srcCompat="@drawable/ic_check" />

    <EditText
        android:id="@+id/fragment_new_job_description"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:background="@drawable/custom_default_input"
        android:hint="@string/service_name"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_service_action_bar"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/fragment_new_job_duration"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_default_input"
        android:clickable="true"
        android:digits="0,1,2,3,4,5,6,7,8,9,:"
        android:focusable="false"
        android:hint="@string/duration_time"
        android:inputType="time"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_new_job_description"
        app:layout_constraintStart_toStartOf="@+id/fragment_new_job_description"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_job_description"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/fragment_new_job_value"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_default_input"
        android:inputType="number"
        android:longClickable="false"
        android:padding="8dp"
        android:text="@string/default_coin_value"
        app:layout_constraintEnd_toEndOf="@+id/fragment_new_job_description"
        app:layout_constraintStart_toStartOf="@+id/fragment_new_job_description"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_job_duration"
        tools:ignore="Autofill"/>


</androidx.constraintlayout.widget.ConstraintLayout>